--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Title of your page: could be your name</title>
+        <title>Benjamin B Katz Protein Mass Spectrometrist @ UC Irvine Dept of Chemistry</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
     </head>
@@ -14,34 +14,27 @@
         </script>
         <div class="h-card header">
             <p class=p-name >
-                <a class="u-url u-uid" href="/">Your Name goes Here</a>
-                <a style="font-size: 0.5em" onclick="toggleDiv('whoami')"> more...</a>
+                <a class="u-url u-uid" href="/">Benjamin B Katz</a>
+                <a style="font-size: 0.5em" onclick="toggleDiv('whoami')"> about me...</a>
             </p>
             <div id="whoami">
-                <p> Put your story here <p>
+                <p> I am a Georgia Tech trained analytical biochemist with over 10 years experience in the both industry and academia.
+                    I use a combination of mass spectrometry and classic biochemical
+                techniques to analyze proteins from a wide range of samples.  <p>
             </div>
             <div class="headinfo">
                 <div class="info">
                     <p class="item">
                         <i class="fa fa-fw fa-envelope email"></i>
-                        <a class=u-email href="mailto:youremail@bla.com">
-                            youremail@bla.com
+                        <a class=u-email href="mailto:bkatz1@uci.edu">
+                            bkatz1@uci.edu
                         </a>
                         /
-                        <a class=u-email href="mailto:anotherEmail@ifyouwant.com">
-                            anothermail@ifuwant.com
+                        <a class=u-email href="mailto:BBKatzProteomics@gmail.com">
+                            BBKatzProteomics@gmail.com
                         </a>
                     </p>
-                    <p class="item">
-                        <a class="u-key" rel=pgpkey href="/key.asc">
-                            <i class="fa fa-fw fa-key"></i> get your own key or del it
-                        </a>
-                    </p>
-                    <p class="item">
-                        <a href="">
-                            <i class="fa fa-fw fa-btc"></i> get your own BTC if you want
-                        </a>
-                    </p>
+                  
                 </div>
                 <div class="galery">
                     <div class="icons">
