--- a/index.html
+++ b/index.html
@@ -34,11 +34,15 @@
                             BBKatzProteomics@gmail.com
                         </a>
                     </p>
-                  
+                   <p class="item">
+                        <a class="u-key" rel=pgpkey href="/key.asc">
+                            <i class="fa fa-fw fa-key"></i> 1651 8169 67B9 B4A6 C31C
+                        </a>
+</p>
                 </div>
                 <div class="galery">
                     <div class="icons">
-                        <a rel=me href=""><i class="fa fa-fw fa-flask"></i></a>
+                        <a rel=me href="https://scholar.google.com/citations?user=MVY3qlkAAAAJ&hl=en"><i class="fa fa-fw fa-flask"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-github"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>
