--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 </div>
                 <div class="galery">
                     <div class="icons">
-                        <a rel=me href="https://scholar.google.com/citations?user=MVY3qlkAAAAJ&hl=en"><i class="fa fa-fw fa-flask"></i></a>
+                        <a rel=me href="https://scholar.google.com/citations?hl=en&user=MVY3qlkAAAAJ&view_op=list_works&sortby=pubdate"><i class="fa fa-fw fa-flask"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-github"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>
