--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <a rel=me href=""><i class="fa fa-fw fa-github"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>
                         <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>
-                        <a rel=me href=""><i class="fa fa-fw fa-medium"></i></a>
+                        <a rel=me href="https://medium.com/@bbkatzproteomics"><i class="fa fa-fw fa-medium"></i></a>
                         <a rel=license height=15px href="https://creativecommons.org/publicdomain/zero/1.0/">
                             <img src="Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;">
                         </a>
