--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           At
           <a href="https://www.illinois.edu">Illinois</a>,
           I was fortunate to work with
-          <a href="https://mcb.illinois.edu/faculty/profile/grosman">Claudio Grosman
+          <a href="https://mcb.illinois.edu/faculty/profile/grosman">Claudio Grosman</a>
           and
           <a href="https://beckman.illinois.edu/directory/person/jake">Eric Jakobsson</a>
           on the physiology and evolution of ion channels while obtaining my Bachelor degrees in Electrical Engineering and Molecular and Cellular Biology.
