--- a/index.html
+++ b/index.html
@@ -63,11 +63,16 @@
         <div class="galery">
           <div class="icons">
             <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en"><i class="fa fa-fw fa-flask"></i></a>
-            <a rel=me href="https://github.com/smsaladi"><i class="fa fa-fw fa-github"></i></a>
-            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>
-            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>
+            <a rel=me href="https://github.com/smsaladi">
+                <i class="fa fa-fw fa-github"></i>
+            </a>
+            <a rel="me" class="u-url" href="https://twitter.com/ShyamSaladi">
+                <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+            </a>
+<!--            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>   -->
+<!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
             <a rel=license height=15px href="https://creativecommons.org/publicdomain/zero/1.0/">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;">
+              <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;"></i>
             </a>
           </div>
         </div>
