--- a/index.html
+++ b/index.html
@@ -50,12 +50,12 @@
         <div class="info">
           <p class="item">
             <i class="fa fa-fw fa-envelope email"></i>
-            <a class=u-email href="mailto:saladi_AT_caltech_FULLSTOP_edu">
-              saladi AT caltech FULLSTOP edu
+            <a class=u-email href="mailto:saladi@caltech.edu">
+              saladi@caltech.edu
             </a>
             /
-            <a class=u-email href="mailto:smsaladi_AT_gmail_FULLSTOP_com">
-              smsaladi AT gmail FULLSTOP com
+            <a class=u-email href="mailto:smsaladi@gmail.com">
+              smsaladi@gmail.com
             </a>
           </p>
 
