add caltech favicon

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Shyam Saladi, Biophysicist @ Caltech</title>
+    <link rel="shortcut icon" href="https://www.caltech.edu/sites/all/themes/caltech_mte/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
   </head>
