--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 <!--            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>   -->
 <!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
             <a rel=license height=15px href="https://creativecommons.org/publicdomain/zero/1.0/">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;"></i>
+              <i src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;"></i>
             </a>
           </div>
         </div>
