--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Shyam Saladi, Biophysicist @ Caltech</title>
     <link rel="shortcut icon" href="https://www.caltech.edu/sites/all/themes/caltech_mte/favicon.ico" type="image/vnd.microsoft.icon">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
   </head>
@@ -13,12 +14,13 @@
         div.style.display = div.style.display == "block" ? "none" : "block";
       }
     </script>
-    <div class="h-card header">
-      <p class=p-name >
+    <div class="container h-card header">
+      <p class="p-name">
         <a class="u-url u-uid" href="/">Shyam M Saladi</a>
         <a style="font-size: 0.5em" onclick="toggleDiv('whoami')"> about me...</a>
       </p>
-      <div id="whoami">
+      <div id="whoami" class="row">
+        <div class="col-sm-8">
         <p>
           I am a biophysicist and engineer excited about using computation to solve large-scale problems in the life sciences.
         </p>
@@ -45,9 +47,11 @@
           passport, exploring the natural landscapes of California, or
           pulling apart the nearest electronic item.
         </p>
+        </div>
       </div>
-      <div class="headinfo">
-        <div class="info">
+      </br>
+      <div class="headinfo row">
+        <div class="info col-sm-8">
           <p class="item">
             <i class="fa fa-fw fa-envelope email"></i>
             <a class=u-email href="mailto:saladi@caltech.edu">
@@ -60,7 +64,7 @@
           </p>
 
         </div>
-        <div class="galery">
+        <div class="gallery col pull-right">
           <div class="icons">
             <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en"><i class="fa fa-fw fa-flask"></i></a>
             <a rel=me href="https://github.com/smsaladi">
