--- a/index.html
+++ b/index.html
@@ -20,6 +20,11 @@
         <a style="font-size: 0.5em" onclick="toggleDiv('whoami')"> about me...</a>
       </p>
       <div id="whoami" class="row">
+        <div class="col-sm-4">
+            <a href="images/puerto_rico_full.jpg">
+              <img src="images/puerto_rico_web.jpg" class="img-responsive"></img>
+          </a>
+        </div>
         <div class="col-sm-8">
         <p>
           I am a biophysicist and engineer excited about using computation to solve large-scale problems in the life sciences.
