--- a/index.html
+++ b/index.html
@@ -44,27 +44,27 @@
           I am a biophysicist and engineer excited about using computation to solve large-scale problems in the life sciences.
         </p>
         <p>
-          Currently, I am a
+          I am a
           <a href="https://www.nsfgrfp.org">NSF graduate research fellow</a>
           at
-          <a href="https://www.caltech.edu">Caltech</a>.
+          <a href="https://www.caltech.edu">Caltech</a>
+          where I am focused on developing computer-driven methods to streamline the experimental process of biochemistry research.
           <a href="http://clemonslab.caltech.edu">Bil Clemons</a>
-          and I are developing computer-driven methods to streamline the experimental process of biochemistry research.
-          We aim to increase efficiency at the lab-bench by helping scientists design more tailored experiments.
+          and I aim to increase efficiency at the lab-bench by helping scientists design more tailored experiments.
         </p>
         <p>
-          At
+          As an undergraduate at
           <a href="https://www.illinois.edu">Illinois</a>,
-          I was fortunate to work with
+          I explored the physiology and evolution of ion channels with
           <a href="https://mcb.illinois.edu/faculty/profile/grosman">Claudio Grosman</a>
           and
           <a href="https://beckman.illinois.edu/directory/person/jake">Eric Jakobsson</a>
-          on the physiology and evolution of ion channels while obtaining my Bachelor degrees in Electrical Engineering and Molecular and Cellular Biology.
+          and obtained my bachelor's degrees in Electrical Engineering and Molecular and Cellular Biology.
         </p>
         <p>
-          In my spare time, you might find me acculmating stamps in my
+          In my spare time, you might find me accumulating stamps in my
           passport, exploring the natural landscapes of California, or
-          pulling apart the nearest electronic item.
+          pulling apart electronics.
         </p>
         </div>
       </div>
