--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <div id="whoami" class="row">
         <div class="col-sm-4">
             <a href="images/puerto_rico_full.jpg">
-              <img src="images/puerto_rico_web.jpg" class="img-responsive"></img>
+              <img src="images/puerto_rico_web.jpg" class="img-responsive" alt="El Yunque">
           </a>
         </div>
         <div class="col-sm-8">
@@ -71,8 +71,8 @@
       </br>
       <div class="headinfo row">
         <div class="info col-sm-8">
-          <p class="item">
-            <i class="fa fa-fw fa-envelope email"></i>
+          <div class="item">
+            <p class="fa fa-fw fa-envelope email"></p>
             <a class=u-email href="mailto:saladi@caltech.edu">
               saladi@caltech.edu
             </a>
@@ -80,22 +80,23 @@
             <a class=u-email href="mailto:smsaladi@gmail.com">
               smsaladi@gmail.com
             </a>
-          </p>
+          </div>
 
         </div>
         <div class="gallery col pull-right">
           <div class="icons">
-            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en"><i class="fa fa-fw fa-flask"></i></a>
+            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en"><p class="fa fa-fw fa-flask"></p></a>
             <a rel=me href="https://github.com/smsaladi">
-                <i class="fa fa-fw fa-github"></i>
+                <p class="fa fa-fw fa-github"></p>
             </a>
             <a rel="me" class="u-url" href="https://twitter.com/ShyamSaladi">
-                <i class="fa fa-fw fa-twitter" aria-hidden="true"></i>
+                <p class="fa fa-fw fa-twitter" aria-hidden="true"></p>
             </a>
 <!--            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>   -->
 <!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
-            <a rel=license height=15px href="https://creativecommons.org/publicdomain/zero/1.0/">
-              <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15px" style="position: relative; top: 2px; left: 2px;"></img>
+            <a rel=license href="https://creativecommons.org/publicdomain/zero/1.0/">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15"
+                 style="position: relative; top: 2px; left: 2px;" alt="CC zero">
             </a>
           </div>
         </div>
