--- a/index.html
+++ b/index.html
@@ -85,18 +85,20 @@
         </div>
         <div class="gallery col pull-right">
           <div class="icons">
-            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en"><p class="fa fa-fw fa-flask"></p></a>
+            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en">
+                <p class="fa fa-fw fa-flask"></p>
+            </a>
             <a rel=me href="https://github.com/smsaladi">
                 <p class="fa fa-fw fa-github"></p>
             </a>
-            <a rel="me" class="u-url" href="https://twitter.com/ShyamSaladi">
+            <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
                 <p class="fa fa-fw fa-twitter" aria-hidden="true"></p>
             </a>
 <!--            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>   -->
 <!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
             <a rel=license href="https://creativecommons.org/publicdomain/zero/1.0/">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="15"
-                 style="position: relative; top: 2px; left: 2px;" alt="CC zero">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="13"
+                 style="position: relative; bottom: 2px; left: 3px;" alt="CC zero">
             </a>
           </div>
         </div>
