--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
             <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
                 <p class="fa fa-fw fa-twitter" aria-hidden="true"></p>
             </a>
-<!--            <a rel=me href=""><i class="fa fa-fw fa-file-pdf-o"></i></a>   -->
+            <a rel=me class="u-url" href="http://www.saladi.org">
+                <p class="fa fa-fw fa-home"></p>
+            </a>
 <!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
             <a rel=license href="https://creativecommons.org/publicdomain/zero/1.0/">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="13"
