--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             <a rel=me href="https://stackexchange.com/users/2686526">
                 <p class="fa fa-fw fa-stack-exchange"></p>
             </a>
+            <a rel=me href="https://www.linkedin.com/in/ssaladi">
+                <p class="fa fa-fw fa-linkedin"></p>
+            </a>
             <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
                 <p class="fa fa-fw fa-twitter" aria-hidden="true"></p>
             </a>
