remove aria hidden tag

--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                 <p class="fa fa-fw fa-linkedin"></p>
             </a>
             <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
-                <p class="fa fa-fw fa-twitter" aria-hidden="true"></p>
+                <p class="fa fa-fw fa-twitter"></p>
             </a>
             <a rel=me class="u-url" href="http://www.saladi.org">
                 <p class="fa fa-fw fa-home"></p>
