add gpg public key

--- a/index.html
+++ b/index.html
@@ -81,6 +81,11 @@
               smsaladi@gmail.com
             </a>
           </div>
+          <div class="item">
+            <a class="u-key" rel="pgpkey" href="https://pgp.mit.edu/pks/lookup?op=vindex&search=0x5F7ADB2BAA5CE260">
+              <i class="fa fa-fw fa-key"></i> 5F7A DB2B AA5C E260
+            </a>
+          </div>
 
         </div>
         <div class="gallery col pull-right">
