snippet about code

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div class="col-sm-8">
         <p>
-          I am a biophysicist and engineer excited about using computation to solve large-scale problems in the life sciences.
+          I am a biophysicist and engineer excited about using computation to solve large-scale problems in the life sciences. I love all things data, programming, visualization, and generally computer-related.
         </p>
         <p>
           I am a
