clarify license and adjust link on webpage

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                 <p class="fa fa-fw fa-home"></p>
             </a>
 <!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
-            <a rel=license href="https://creativecommons.org/publicdomain/zero/1.0/">
+            <a rel=license href="https://github.com/smsaladi/smsaladi.github.io/blob/master/LICENSE">
                 <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="20"
                  style="position: relative; bottom: 2px; left: 3px;" alt="CC zero">
             </a>
