add ECAG and revise fun stuff

--- a/index.html
+++ b/index.html
@@ -51,6 +51,10 @@
           where I am focused on developing computer-driven methods to streamline the experimental process of biochemistry research.
           <a href="http://clemonslab.caltech.edu">Bil Clemons</a>
           and I aim to increase efficiency at the lab-bench by helping scientists design more tailored experiments.
+          On the side as member of the
+          <a href="https://elifesciences.org/about/people/early-career">Early Career Advisory Group</a>,
+          I join eLife on their quest to rethink how research is communicated, in part,
+          by considering how software tools can improve the quality of scientific output.
         </p>
         <p>
           As an undergraduate at
@@ -62,8 +66,8 @@
           and obtained my bachelor's degrees in Electrical Engineering and Molecular and Cellular Biology.
         </p>
         <p>
-          In my spare time, you might find me accumulating stamps in my
-          passport, exploring the natural landscapes of California, or
+          In my spare time, you might find me trialing a new espresso,
+          hiking the natural landscapes of California, or
           pulling apart electronics.
         </p>
         </div>
