fix linkedin url

--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
             <a rel=me href="https://stackexchange.com/users/2686526">
                 <p class="fa fa-fw fa-stack-exchange"></p>
             </a>
-            <a rel=me href="https://www.linkedin.com/in/ssaladi">
+            <a rel=me href="https://www.linkedin.com/in/ShyamSaladi">
                 <p class="fa fa-fw fa-linkedin"></p>
             </a>
             <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
