--- a/index.html
+++ b/index.html
@@ -2,8 +2,19 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+
+    <meta property="og:title" content="Shyam Saladi" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="description" content="Biophysicist at Caltech" />
+    <meta property="og:description" content="Biophysicist at Caltech" />
+    <link rel="canonical" href="https://shyam.saladi.org/" />
+    <meta property="og:url" content="https://shyam.saladi.org/" />
+    <meta property="og:site_name" content="Shyam Saladi" />
+    <script type="application/ld+json">{"headline":"Shyam Saladi, Biophysicist at Caltech","@type":"WebSite","url":"https://shyam.saladi.org/","name":"Shyam Saladi","description":"Biophysicist at Caltech","@context":"https://schema.org"}</script>
+
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+  
     <title>Shyam Saladi, Biophysicist @ Caltech</title>
     <link rel="shortcut icon" href="https://www.caltech.edu/sites/all/themes/caltech_mte/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
