update font awesome

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <title>Shyam Saladi, Biophysicist @ Caltech</title>
     <link rel="shortcut icon" href="https://www.caltech.edu/sites/all/themes/caltech_mte/favicon.ico" type="image/vnd.microsoft.icon">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"  integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.1/css/all.css" integrity="sha384-vp86vTRFVJgpjF9jiIGPEEqYqlDwgyBgEF109VFjmqGmIY/Y4HV4d3Gp2irVfcrp" crossorigin="anonymous">
+
+
+    
     <link rel="stylesheet" href="style.css">
 
     <script>
@@ -106,27 +109,25 @@
         <div class="gallery col pull-right">
           <div class="icons">
             <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en">
-                <p class="fa fa-fw fa-flask"></p>
+                <p class="fas fa-flask"></p>
             </a>
             <a rel=me href="https://github.com/smsaladi">
-                <p class="fa fa-fw fa-github"></p>
+                <p class="fab fa-github"></p>
             </a>
             <a rel=me href="https://stackexchange.com/users/2686526">
-                <p class="fa fa-fw fa-stack-exchange"></p>
+                <p class="fab fa-stack-exchange"></p>
             </a>
             <a rel=me href="https://www.linkedin.com/in/ShyamSaladi">
-                <p class="fa fa-fw fa-linkedin"></p>
+                <p class="fab fa-linkedin-in"></p>
             </a>
             <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
-                <p class="fa fa-fw fa-twitter"></p>
+                <p class="fab fa-twitter"></p>
             </a>
             <a rel=me class="u-url" href="http://www.saladi.org">
-                <p class="fa fa-fw fa-home"></p>
+                <p class="fas fa-home"></p>
             </a>
-<!--            <a rel=me href=""><i class="fa fa-fw fa-gears"></i></a>  -->
             <a rel=license href="https://github.com/smsaladi/smsaladi.github.io/blob/master/LICENSE">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/5/52/Cc-zero.svg" width="20"
-                 style="position: relative; bottom: 2px; left: 3px;" alt="CC zero">
+		<p class="fab fa-creative-commons-zero"></p>
             </a>
             <a rel=me class="u-url" onclick="toggleDiv('land')">
                 <p class="fas fa-globe-americas"></p>
