--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     <div class="container h-card header">
       <p class="p-name">
         <a class="u-url u-uid" href="/">Shyam M Saladi</a>
-        <a style="font-size: 0.5em" onclick="toggleDiv('whoami')"> about me...</a>
+        <a style="font-size: 0.5em; text-decoration: underline;" onclick="toggleDiv('whoami')"> about me...</a>
       </p>
       <div id="whoami" class="inithidden row">
         <div class="col-sm-4">
