--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
         div.style.display = div.style.display == "block" ? "none" : "block";
       }
     </script>
-    <div class="container h-card header">
+    <div class="container h-card">
+    <div class="header">
       <p class="p-name">
         <a class="u-url u-uid" href="/">Shyam M Saladi</a>
         <a style="font-size: 0.5em; text-decoration: underline;" onclick="toggleDiv('whoami')"> about me...</a>
@@ -144,6 +145,8 @@
 	It was also a site of trade, travel, gathering and healing for more than a dozen other Native tribes and is still home to over 100,000 tribal members in the state of Illinois.
 	Learn more about this and other <a href="https://www.native-land.ca">indigenous land in North America</a>.
       </div>
+    </div>
+    
     </div>
   </body>
 </html>
