add titles for links

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
             </a>
           </div>
           <div class="item">
-            <a class="u-key" rel="pgpkey" href="https://keybase.io/saladi">
+            <a class="u-key" rel="pgpkey" href="https://keybase.io/saladi" title="Link to my Keybase">
               <i class="fa fa-fw fa-key"></i> 5F7A DB2B AA5C E260
             </a>
           </div>
@@ -109,28 +109,26 @@
         </div>
         <div class="gallery col pull-right">
           <div class="icons">
-            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en">
+            <a rel=me href="https://scholar.google.com/citations?user=aUl4n7AAAAAJ&hl=en" title="Link to my Google Scholar">
                 <p class="fas fa-flask"></p>
-            </a>
-            <a rel=me href="https://github.com/smsaladi">
+            <a rel=me href="https://github.com/smsaladi" title="Link to my Github">
                 <p class="fab fa-github"></p>
-            </a>
-            <a rel=me href="https://stackexchange.com/users/2686526">
+            <a rel=me href="https://stackexchange.com/users/2686526" title="Link to my Stack Exchange">
                 <p class="fab fa-stack-exchange"></p>
             </a>
-            <a rel=me href="https://www.linkedin.com/in/ShyamSaladi">
+            <a rel=me href="https://www.linkedin.com/in/ShyamSaladi" title="Link to my LinkedIn">
                 <p class="fab fa-linkedin-in"></p>
             </a>
-            <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi">
+            <a rel=me class="u-url" href="https://twitter.com/ShyamSaladi" title="Link to my Twitter">
                 <p class="fab fa-twitter"></p>
             </a>
-            <a rel=me class="u-url" href="http://www.saladi.org">
+            <a rel=me class="u-url" href="http://www.saladi.org" title="Link to my Family">
                 <p class="fas fa-home"></p>
             </a>
-            <a rel=license href="https://github.com/smsaladi/smsaladi.github.io/blob/master/LICENSE">
+            <a rel=license href="https://github.com/smsaladi/smsaladi.github.io/blob/master/LICENSE" title="Link to this site's license">
 		<p class="fab fa-creative-commons-zero"></p>
             </a>
-            <a rel=me class="u-url" onclick="toggleDiv('land')">
+            <a rel=me class="u-url" onclick="toggleDiv('land')" title="Opens the land acknowledgement">
                 <p class="fas fa-globe-americas"></p>
             </a>
 
@@ -140,7 +138,7 @@
     </div>
 
     <div class="extrainfo">
-      <div id="land" class="inithidden col" onclick="toggleDiv('land')">
+      <div id="land" class="inithidden col" ondblclick="toggleDiv('land')">
         In the spirit of healing, I acknowledge that Chicagoland, the place of my upbringing, sits on the traditional homelands of the people of the Council of Three Fires, the Ojibwe, Potawatomi, and Odawa as well as the Menominee, Miami and Ho-Chunk nations.
 	It was also a site of trade, travel, gathering and healing for more than a dozen other Native tribes and is still home to over 100,000 tribal members in the state of Illinois.
 	Learn more about this and other <a href="https://www.native-land.ca">indigenous land in North America</a>.
